--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.3.13",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-es2015-loose": "^6.1.4",
+    "babel-preset-react": "^6.3.13",
     "eslint": "^1.10.3",
     "json-loader": "^0.5.4",
+    "react": "^0.14.5",
+    "react-dom": "^0.14.5",
     "webpack": "^1.12.9"
   }
 }
