--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "json-loader": "^0.5.4",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5",
     "webpack": "^1.12.9"
   }
 }
